[package]
name = "malwaredb-lzjd"
version = "0.1.3"
authors = ["Henk Dieter <henkdieter@tweedegolf.com>", "Richard Zak <richard.j.zak@gmail.com>"]
edition = "2021"
exclude = ["in/*", "out/*"]
description = "Rust implementation of the LZJD algorithm by Edward Raff -- https://github.com/EdwardRaff/jLZJD"
readme = "README.md"
keywords = ["lzjd", "edit", "distance", "Lempel", "Ziv"]
categories = ["algorithms", "compression", "cryptography", "filesystem", "science"]
license = "GPL-3.0"
repository = "https://github.com/malwaredb/lzjd-rs"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
malwaredb-murmurhash3 = "0.1"
bincode = "2.0"
crc32fast = "1.5"
walkdir = "2.5"
num_cpus = "1.17"
rayon = "1.11"

[dev-dependencies]
rand = "0.10"
criterion = "0.8"

[[bench]]
name = "lzjd"
harness = false

[[bin]]
name = "lzjd"
path = "src/main.rs"
